src/test/ui/error-codes/E0520.stderr
error[E0520]: `fly` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/E0520.rs:26:5
   |
21 | / impl<T: Clone> SpaceLlama for T {
22 | |     fn fly(&self) {}
23 | | }
   | |_- parent `impl` is here
...
26 |       default fn fly(&self) {}
   |       ^^^^^^^^^^^^^^^^^^^^^^^^ cannot specialize default item `fly`
   |
   = note: to specialize, `fly` in the parent `impl` must be marked `default`

error: aborting due to previous error

